--- a/teknofest/pubspec.yaml
+++ b/teknofest/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   supabase_flutter: ^2.6.0
   dotenv: ^4.2.0
   flutter_dotenv: ^5.1.0
+  awesome_snackbar_content: ^0.1.3
 
 dev_dependencies:
   flutter_test:
